fix dialog button alignments and input width

--- a/browser/style/file-select-control.css
+++ b/browser/style/file-select-control.css
@@ -4,6 +4,7 @@
 }
 
 .file-selector {
+	height: 30vh;
 	position: relative; /* could be absolute or relative */
 	padding-top: 30px; /* height of header */
 	margin-bottom: 10px;
@@ -19,8 +20,7 @@
 .fixed-table-container-inner {
 	overflow-x: hidden;
 	overflow-y: auto;
-	/*height: 100%;*/
-	height: 40vh;
+	height: 100%;
 }
 
 .header-background {
@@ -105,7 +105,7 @@
 	min-height: 30vh;
 }
 
-.file-select-control .buttons,
+.file-select-control .bottom-row,
 .file-select-control .tags {
 	margin: 0 10px 0 10px;
 }
@@ -117,4 +117,12 @@
 
 #fileUploadFile {
 	margin-left: 10px;
+}
+
+#buttons-row {
+	margin-bottom: 0px;
+}
+
+#buttons-row td {
+	padding: 0px;
 }
